# genia-12-2024

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
docs/: future.md  genia.md  goals.md  lexer.md  lists.md  parser.md  ranges.md  regex.md  spec.md
genia/: __init__.py  callable_function.py  delay.py  interpreter.py  lazy_seq.py  lexer.py  main.py  parser.py  patterns.py  seq.py
genia/hosted/: os.py  random_utils.py  tictactoe.py
genia/services/: dice_service.py
scripts/: 1and7.genia  apply.genia  cons.genia  csv_test.genia  delay.genia  dice.genia  duplicates.genia  example_script.genia  fns.genia  os.genia  ranges.genia  seq.genia  string.genia  tic_tac_toe.genia  wc.genia
tests/: test_adt.py  test_callable_function.py  test_delay.py  test_examples.py  test_fns_varargs.py  test_interpreter.py  test_kit.py  test_lazy_seq.py  test_lexer.py  test_nested_import.py  test_operator_functions.py  test_parser.py  test_patterns.py  test_random.py  test_seq_functions.py
